Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16393

LLDB: incorrect code in LldbEngine::runCommand function

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.1.0-beta1
    • Qt Creator 4.0.0
    • Debugger
    • None
    • b00112290040c22e5adb549af10a6f9bbd464729

      LLDB debugger doesn't start on Linux due to a bug.

      Function LldbEngine::runCommand is called before the lldb is initialized (from fetch modules). Instead of ignoring the request, it shuts down the engine.

      This code in qt-creator/src/plugins/debugger/lldb/lldbengine.cpp:128:

      void LldbEngine::runCommand(const DebuggerCommand &cmd)
      {
      QTC_ASSERT(m_lldbProc.state() == QProcess::Running, notifyEngineIll());

      Should be replaced with this code:

      void LldbEngine::runCommand(const DebuggerCommand &cmd)
      {
      if( m_lldbProc.state() == QProcess::Running ){

        For Gerrit Dashboard: QTCREATORBUG-16393
        # Subject Branch Project Status CR V

            hjk hjk
            geneing Eugene Ingerman
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes